--- a/My-Demo/web_worker_template/test/worker.html
+++ b/My-Demo/web_worker_template/test/worker.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>template_html</title>
   <style>
     #log {
       width: 956px;
@@ -46,29 +46,6 @@
     const btn02 = document.getElementById("button2");
     const btn03 = document.getElementById("button3");
 
-    btn01.onclick = function() {
-      console.log("add(1, 2, 3)")
-      worker_exports.add(1, 2, 3).then(console.log).catch(console.error)
-      console.log("testVerify()")
-      worker_exports.testVerify().then(console.log).catch(console.error)
-    }
-
-    btn02.onclick = async function() {
-      const arr = [8,[8]];
-      console.log("returnArray(" + JSON.stringify(arr) + ")");
-      worker_exports.returnArray(arr).then(a=>console.log(JSON.stringify(a))).catch(console.error)
-      console.log("testError(1, 2, 3, 4, 5)")
-      worker_exports.testError(1, 2, 3, 4, 5).then(console.log).catch(console.error)
-    }
-
-    btn03.onclick = async function() {
-      console.log('testProgress(console.log, "end", 2)');
-      worker_exports.testProgress(p => console.log(parseInt(p * 100) + "%"), "end", 2).then(console.log).catch(console.error);
-      const ms = 1500;
-      console.log("delay(" + ms + ")")
-      worker_exports.delay(ms).then(console.log).catch(console.error)
-    }
-
     console.log = (...args) => log("black", args);
     console.error = (...args) => log("red", args);
     console.warn = (...args) => log("orange", args);
@@ -81,6 +58,10 @@
         left: 0,
         behavior: "smooth",
       });
+    }
+    
+    document.body.onload = function() {
+      console.log(worker_exports.sum(1,2,3))
     }
 
   </script>
